--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FlashCards</string>
     <string name="add_card">Add Card</string>
+    <string name="list_cards">List Cards</string>
+    <string name="swipe_cards">Swipe Cards</string>
 </resources>
