--- a/screenlist/src/main/res/values/strings.xml
+++ b/screenlist/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="correct">Correct: %1$d</string>
+    <string name="incorrect">Incorrect: %1$d</string>
 </resources>
