--- a/screenlist/src/main/res/values/strings.xml
+++ b/screenlist/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="correct">Correct: %1$d</string>
     <string name="incorrect">Incorrect: %1$d</string>
+    <string name="clear_counts_message">Clear correct and incorrect counts for %1$s?</string>
+    <string name="delete_message">Delete %1$s?</string>
 </resources>
