--- a/screenlist/src/main/res/values/strings.xml
+++ b/screenlist/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="correct">Correct: %1$d</string>
     <string name="incorrect">Incorrect: %1$d</string>
-    <string name="clear_counts_message">Clear correct and incorrect counts for %1$s?</string>
+    <string name="new_session_message">Create a new session of correct and incorrect counts?</string>
     <string name="delete_message">Delete %1$s?</string>
+    <string name="new_session">New Session</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
