Add shuffle button to swipe screen

--- a/feature_swipe/src/main/res/values/strings.xml
+++ b/feature_swipe/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="incorrect">Incorrect</string>
     <string name="unsure">Unsure</string>
     <string name="correct">Correct</string>
+    <string name="shuffle">Shuffle</string>
 </resources>
